Update to rebrand fonts (except Monaco, for now)
Monaco has some ongoing problems with layout with non-default fonts,
notable with both broken word wrapping (goes slightly too far) and weird
relayout of text when big chunks are selected.

Enabling ligatures & doing remeasure slightly helps in the Settings UI
case maybe, but not in normal editors. Needs proper investigation.

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
             height: 100%;
             overflow: hidden;
 
-            font-family: Lato, Arial, sans-serif;
+            font-family: "DM Sans", Arial, sans-serif;
         }
 
         #app-loading-placeholder {
