--- a/src/amiusing.html
+++ b/src/amiusing.html
@@ -22,7 +22,8 @@
       padding: 8px;
 
       background-color: #d8e2e6;
-      font-family: Lato;
+      font-family: "DM Sans", Arial, sans-serif;
+      letter-spacing: -0.5px;
       line-height: 1.3;
       display: flex;
       flex-direction: column;
@@ -35,11 +36,12 @@
     }
 
     h1 {
-      font-size: 36pt;
+      font-size: 48px;
+      letter-spacing: -2px;
     }
 
     p {
-      font-size: 18pt;
+      font-size: 24px;
     }
 
     .logo {
@@ -62,6 +64,6 @@
       that brought you this page, or start browsing elsewhere to collect more data.
     </p>
   </div>
-  <link href="https://fonts.googleapis.com/css?family=Lato&display=block" rel="stylesheet" />
+  <link href="https://fonts.cdnfonts.com/css/dm-sans" rel="stylesheet">
 </body>
 </html>
