Update default loading background

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
     </div>
 
     <script>
-        const bgColor = localStorage.getItem('theme-background-color') || '#d8e2e6';
+        const bgColor = localStorage.getItem('theme-background-color') || '#e4e8ed';
         document.querySelector('html').style.backgroundColor = bgColor;
 
         let progressElement = document.getElementById('progress-logo');
