Use system theme by default (even without Pro!)

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,12 @@
     </div>
 
     <script>
-        const bgColor = localStorage.getItem('theme-background-color') || '#e4e8ed';
+        const bgColor = localStorage.getItem('theme-background-color') || (
+            // Use dark/light theme containerBackground
+            window.matchMedia("(prefers-color-scheme: dark)")
+                ? '#1e2028'
+                : '#e4e8ed'
+        );
         document.querySelector('html').style.backgroundColor = bgColor;
 
         let progressElement = document.getElementById('progress-logo');
